--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,15 @@
 # CUSTOMIZE
 # Name of your site (displayed in the header)
 # This should be your name or nickname.
-name: Your Name
+name: Kendrick
 
 # CUSTOMIZE
 # Short bio or description aout you (displayed in the header)
-description: Student in CSci 395.86 in Hunter College, Fall 2019
+description: Student in CSci 395.86 at Hunter College, Fall 2019
 
 # CUSTOMIZE
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars3.githubusercontent.com/u/51339031?v=4
+avatar: https://avatars.githubusercontent.com/waterpolymer
 
 
 # CUSTOMIZE
@@ -24,10 +24,10 @@ avatar: https://avatars3.githubusercontent.com/u/51339031?v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email:    Kendrick.shao28@myhunter.cuny.edu
   facebook:
   flickr:
-  github:    hunter-college-ossd-fall-2019
+  github:    waterpolymer
   instagram:
   linkedin:
   pinterest:
@@ -43,7 +43,7 @@ footer-links:
 # name of your own repository, which must be of the form, "your-username-weekly"
 # where "your-username" is your GitHub username.
 
-url: "https://hunter-college-ossd-fall-2019.github.io/weekly" 
+url: "https://hunter-college-ossd-fall-2019.github.io/waterpolymer-weekly" 
 
 # CUSTOMIZE
 # The baseurl is used by Jekyll as a relative repository name.
@@ -52,7 +52,7 @@ url: "https://hunter-college-ossd-fall-2019.github.io/weekly"
 # where "your-username" is your GitHub username. It must begin with the "/" -
 # do not remove it.
 
-baseurl: "/weekly"
+baseurl: "/waterpolymer-weekly"
 
 #
 # !! You don't need to change any of the configuration flags below !!
